@@ -1,12 +1,0 @@
-// Copyright (c) 2024 Yuki Kimoto
-// MIT License
-
-#include "spvm_native.h"
-
-#include <openssl/ssl.h>
-#include <openssl/err.h>
-
-#include <openssl/x509v3.h>
-
-static const char* FILE_NAME = "Net/SSLeay/Util/X509.c";
-
