@@ -1,8 +1,0 @@
-# Copyright (c) 2024 Yuki Kimoto
-# MIT License
-
-class Net::SSLeay::Util::X509 {
-  
-  use Net::SSLeay::X509;
-  
-}
